test_regress/t/t_fourstate_dtype_unsup.out
%Error-UNSUPPORTED: t/t_fourstate_dtype_unsup.v:13:9: Variables of type: 'logic$[$]' are unsupported with --fourstate
                                                    : ... note: In instance 't'
   13 |   logic q [$];
      |         ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_fourstate_dtype_unsup.v:14:9: Variables of type: 'logic$[0:12]' are unsupported with --fourstate
                                                    : ... note: In instance 't'
   14 |   logic p [13];
      |         ^
%Error-UNSUPPORTED: t/t_fourstate_dtype_unsup.v:15:9: Variables of type: 'logic$[integer]' are unsupported with --fourstate
                                                    : ... note: In instance 't'
   15 |   logic a [integer];
      |         ^
%Error-UNSUPPORTED: t/t_fourstate_dtype_unsup.v:16:7: Variables of type: 'struct{}$unit::bar' are unsupported with --fourstate
                                                    : ... note: In instance 't'
   16 |   bar c;
      |       ^
%Error: Exiting due to
